--- a/arch/arm64/boot/dts/sprd/lcd/lcd_icnl9916c_tm_mipi_hd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_icnl9916c_tm_mipi_hd.dtsi
@@ -68,6 +68,14 @@
 						39 14 00 01 29
 						];
 
+					sprd,cabc-on-command = [
+						39 00 00 02 55 01
+						];
+
+					sprd,cabc-off-command = [
+						39 00 00 02 55 00
+						];
+
 					oled-backlight {
 						//default-brightness = <900>;
 						//sprd,max-level = <4095>;
