--- a/arch/arm64/boot/dts/sprd/lcd/lcd_ili9883c_boe_mipi_hd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_ili9883c_boe_mipi_hd.dtsi
@@ -86,6 +86,16 @@
 						39 14 00 01 29
 						];
 
+					sprd,cabc-on-command = [
+						39 00 00 04 FF 98 83 00
+						39 00 00 02 55 02
+						];
+
+					sprd,cabc-off-command = [
+						39 00 00 04 FF 98 83 00
+						39 00 00 02 55 00
+						];
+
 					oled-backlight {
 						//default-brightness = <900>;
 						//sprd,max-level = <4095>;
