--- a/arch/arm64/boot/dts/sprd/lcd/lcd_td4160_txd_mipi_hd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_td4160_txd_mipi_hd.dtsi
@@ -63,6 +63,14 @@
 						15 14 00 01 29
 						];
 
+					sprd,cabc-on-command = [
+						29 00 00 02 55 03
+						];
+
+					sprd,cabc-off-command = [
+						29 00 00 02 55 00
+						];
+
 					oled-backlight {
 						//default-brightness = <900>;
 						//sprd,max-level = <4095>;
