Bug #2459136 thermal: add driver for max skin temp
[root cause  ]: add driver for max skin temp
[changes     ]: add driver for max skin temp
[side effects]: no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: na
[board]: all
[test case]: thermal
[reviewers]: charger_xm

commit_template_version:v1
Signed-off-by: Lisha Xie <Lisha.Xie@unisoc.com>

Change-Id: I78a6a6f733ad1d26e12df15c17bb817176e42ac4

--- a/drivers/thermal/Kconfig
+++ b/drivers/thermal/Kconfig
@@ -503,9 +503,15 @@ config SPRD_DEDICATE_THERMAL
 
 config SPRD_SHELL_THERMAL
 	tristate "sprd shell thermal"
-	depends on THERMAL && SPRD_THERMAL
+	depends on THERMAL
 	help
 	  this driver belongs to thermal module, We use it to monitor virtua shell's temperature
+
+config SPRD_SKIN_THERMAL
+	tristate "sprd virt thermal"
+	depends on THERMAL
+	help
+	  this driver belongs to thermal module, We use it to get max skin temp
 
 config SC27XX_TSENSOR_THERMAL
 	tristate "Spreadtrum SC27xx Tsensor Thermal Support"
