EKMOTO-463:bsp:fpc1560 fingerprint bring up - dts&build.cfg[2/13]
Change-Id: Ib99c192ab64a01e2524473ef4559c55ca85732c9
Signed-off-by: wangtengda <tengda.wang@chino-e.com>

--- a/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
@@ -195,9 +195,15 @@
 				const-offset = <3000>;
 			};
 
-			fingerprint@0 {
+			/*fingerprint@0 {
 				compatible = "microarray,afs121";
 				fpint-gpios = <&eic_async 29 0>;
+  			};*/
+
+			fingerprint_fpc {
+				compatible = "fpc,fpc1553";
+				fpc,rst_gpio    = <&ap_gpio 110 0>;
+				fpc,irq_gpio    = <&eic_async 29 0>;
   			};
 
 			sprd-uid {
