[issue][XTS][EKissue-8154]fix CtsMediaDrmFrameworkTestCases fail [2/4]
[rootcause]:new tools need update code
[solution]:add new patch for drm
[sideeffect]:null
[others]:null

Change-Id: I1f691749c0d7384b32babfe393c53327a459f471
Signed-off-by: chenchangan <chenchangan@longcheer.com>

--- a/arch/arm64/boot/dts/sprd/lion-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/lion-overlay.dts
@@ -553,6 +553,12 @@
 		label = "carveout_fd";
 		memory-region = <&fd_reserved>;
 	};
+
+
+	protected-reserved {
+		label = "protected";
+		memory-region = <&protected_reserved>;
+	};
 };
 
 &adi_bus {
