EKMOTO-1416: 2023-12_23_2506102: Bug #2506102 arm64: dts: add protected heap support
[root cause  ]:add protected reserved memory
[changes     ]:protected reserved memory
[side effects]:no
[self test   ]:yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:yes
[board]:all
[test case]:power on
[reviewers]:sam.liu

commit_template_version:v1

Change-Id: I601235c8cb81d4684abe79550c82ad243d56449d
Signed-off-by: Qiankun Xu <qiankun.xu1@unisoc.com>
(cherry picked from commit 7d6de8d4a5fe36da1f83390e021dfe6765506bdc)

--- a/arch/arm64/boot/dts/sprd/reserved-memory/ums9621-1h10-overlay.dtsi
+++ b/arch/arm64/boot/dts/sprd/reserved-memory/ums9621-1h10-overlay.dtsi
@@ -20,6 +20,12 @@
  */
 
 &reserved_memory {
+
+	/*Increase support for protected_heap*/
+	protected_reserved: protected-mem@80003000 {
+		reg = <0x0 0x80003000 0x0 0x00002000>;
+	};
+
 	/* Encrypt and decrypt widevine video */
 	oemcrypto_reserved: oemcrypto@b4100000 {
 		reg = <0x0 0xb4100000 0x0 0x01100000>;
