--- a/arch/arm64/boot/dts/sprd/ums312-2h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums312-2h10-overlay.dts
@@ -149,6 +149,11 @@
 		memory-region = <&fd_reserved>;
 	};
 
+	protected-reserved {
+		label = "protected";
+		memory-region = <&protected_reserved>;
+	};
+
 };
 
 &pin_controller {
