--- a/arch/arm64/boot/dts/sprd/ums512-1h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10-overlay.dts
@@ -93,6 +93,11 @@
 		label = "uncached_carveout_oem";
 		memory-region = <&oemcrypto_reserved>;
 	};
+
+	protected-reserved {
+		label = "protected";
+		memory-region = <&protected_reserved>;
+	};
 };
 
 &chosen {
