--- a/arch/arm64/boot/dts/sprd/ums9621-1h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9621-1h10-overlay.dts
@@ -260,6 +260,11 @@
 		label = "uncached_carveout_oem";
 		memory-region = <&oemcrypto_reserved>;
 	};
+
+	protected-reserved {
+		label = "protected";
+		memory-region = <&protected_reserved>;
+	};
 };
 
 &sdio0 {
