--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
@@ -31,6 +31,7 @@
 #include "lcd/lcd_nt36672c_truly_mipi_fhd.dtsi"
 #include "lcd/lcd_td4320_truly_mipi_fhd.dtsi"
 #include "lcd/lcd_td4375_dijin_4lane_mipi_fhd.dtsi"
+#include "lcd/lcd_ili9883c_txd_120hz_mipi_hd.dtsi"
 #include "lcd/lcd_dummy_mipi.dtsi"
 #include "reserved-memory/ums9620-2h10-overlay.dtsi"
 #include "touchscreen/ums9620-spi1-gpio13-14-tp.dtsi"
@@ -491,6 +492,33 @@
 	btn38003a: btn38003a_redriver@30 {
 		compatible = "sprd,ptn38003a redriver";
 		reg = <0x30>;
+	};
+
+	aw99703-bl@36 {
+		compatible = "awinic,aw99703-bl";
+		status = "okay";
+		reg = <0x36>;
+		aw99703,hwen-gpio = <&ap_gpio 189 0>;
+		/* brightness map level 1:256,2:1024,3:2048 */
+		aw99703,bl-map = <3>;
+		aw99703,using-lsb;
+		aw99703,ovp-level = <3>; /* 38V(default) */
+		aw99703,ocp-level = <2>; /* 2.7A(default) */
+		aw99703,switch-freq = <1>; /* 1000kHz(default) */
+		aw99703,auto-freq-high = <0x80>;
+		aw99703,auto-freq-low = <0x10>;
+		aw99703,bl-fscal-led = <0x1F>; /* 29.6mA(default) */
+		aw99703,bl-channel = <3>;
+		aw99703,turn-on-ramp = <0x04>; /* 8ms(default) */
+		aw99703,turn-off-ramp = <0x04>; /* 8ms(default) */
+		aw99703,pwm-trans-dim = <0>; /* 2ms(default) */
+		aw99703,i2c-trans-dim = <0>; /* 1us(default) */
+		aw99703,pwm-mode = <0>; /* 0 pwm enable,1 PWM disable */
+		aw99703,map-type = <1>; /* linear */
+		aw99703,work-mode = <1>; /* backlight */
+		aw99703,flash-timeout-time = <0x05>; /* 500ms(default) */
+		aw99703,flash-current = <0x08>; /* 59.2mA(default) */
+		aw99703,efuse-config = <0x1C 0x61 0x61 0x4C 0x2C 0xC0 0x08 0x00 0x01 0xC0 0x00 0x00 0x50>;
 	};
 };
 
