--- a/drivers/power/supply/Makefile
+++ b/drivers/power/supply/Makefile
@@ -116,6 +116,8 @@ obj-$(CONFIG_CHARGER_SURFACE)	+= surface_charger.o
 obj-$(CONFIG_CHARGER_BQ2560X)	+= bq2560x-charger.o
 obj-y	+= bq2560x-pe-charger.o
 obj-y	+= bq2560x-qc-charger.o
+obj-y	+= hl7015-qc-charger.o
+obj-$(CONFIG_CHARGER_HL7015)	+= hl7015-charger.o
 obj-$(CONFIG_CHARGER_BQ2597X)	+= bq2597x-charger.o
 obj-$(CONFIG_CHARGER_HL7139)	+= hl7139-charger.o
 obj-$(CONFIG_CHARGER_SC8549)	+= sc8549-charger.o
