EKMOTO-833:bsp:goodix gc3976 fingerprint bring up - dts&build.cfg[2/9]
Change-Id: I0f8867e03c8f5f2806abbf970d3491b4373bcd75
Signed-off-by: wangtengda <tengda.wang@chino-e.com>

--- a/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
@@ -204,7 +204,14 @@
 				compatible = "fpc,fpc1553";
 				fpc,rst_gpio    = <&ap_gpio 110 0>;
 				fpc,irq_gpio    = <&eic_async 29 0>;
-  			};
+			};
+
+			fingerprint_goodix {
+				compatible = "sprd,goodix-fp";
+				gfrst-gpio = <&ap_gpio 110 0>;
+				gfirq-gpio = <&eic_async 29 0>;
+				//gfvdd-gpio = <&eic_async 29 0>;
+			};
 
 			sprd-uid {
 				compatible = "sprd,uid";
