--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
@@ -209,6 +209,13 @@
 				fpc,irq_gpio    = <&eic_async 29 0>;
   			};
 
+			fingerprint_goodix {
+				compatible = "sprd,goodix-fp";
+				gfrst-gpio = <&ap_gpio 110 0>;
+				gfirq-gpio = <&eic_async 29 0>;
+				//gfvdd-gpio = <&eic_async 29 0>;
+			};
+
 			sprd-uid {
 				compatible = "sprd,uid";
 				nvmem-cells = <&uid_start>, <&uid_end>;
