[EKMOTO-834][audio]config dts for fs1815<2/6>
Change-Id: I17db2d6ac94c112643f7da349d1c06d43e5d458e

--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
@@ -498,6 +498,22 @@
 		aw99703,flash-current = <0x08>; /* 59.2mA(default) */
 		aw99703,efuse-config = <0x1C 0x61 0x61 0x4C 0x2C 0xC0 0x08 0x00 0x01 0xC0 0x00 0x00 0x50>;
 	};
+
+	// Speaker up
+	speaker_up: fs1815@34 {
+		compatible = "foursemi,fs1815";
+		reg = <0x34>;
+		fsm,rst-gpio = <&ap_gpio 181 0>;
+		status = "okay";
+	};
+
+	// Speaker down
+	speaker_down: fs1815@35 {
+		compatible = "foursemi,fs1815";
+		reg = <0x35>;
+		fsm,rst-gpio = <&ap_gpio 120 0>;
+		status = "okay";
+	};
 };
 
 &hsphy {
@@ -724,4 +740,13 @@
 		irq-mux = < 2 >; // set csx as irq pin. config this field when connect to aw96308/aw96310
 		status = "okay";
 	};
+};
+
+&i2s0 {
+	status = "okay";
+};
+
+&sound_vbc_v4_sprd_codec {
+	status = "okay";
+	sprd,spk-ext-pa-info = <0 1 4 0>,<1 1 4 0>,<2 1 4 0>;
 };
