EKMOTO-463:bsp:fpc1560 change fingerprint the normal power supply to LDO mode[2/2]
Change-Id: I4154d60349286a8493f2db5d39b5e0c58fe36905
Signed-off-by: wangtengda <tengda.wang@chino-e.com>

--- a/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
@@ -204,6 +204,7 @@
 				compatible = "fpc,fpc1553";
 				fpc,rst_gpio    = <&ap_gpio 110 0>;
 				fpc,irq_gpio    = <&eic_async 29 0>;
+				vdd_io-supply   = <&vddldo3>;
 			};
 
 			fingerprint_goodix {
