--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -898,6 +898,12 @@ config CHARGER_BQ2597X
 	help
 	  Say Y to include support for TI BQ2597X Charger.
 
+config CHARGER_SC8541
+	tristate "SC SC8541 Charger"
+	depends on I2C || COMPILE_TEST
+	help
+	  Say Y to include support for TI BQ2597X Charger.
+
 config CHARGER_HL7139
 	tristate "HL7139 Charger"
 	depends on I2C || COMPILE_TEST
