EKMOTO-833:bsp:Modify goodix gc3976 fingerprint power supply to ldo[2/2]
Change-Id: I5fde6f921ef3c15af96eefa5f1f1bca294073821
Signed-off-by: wangtengda <tengda.wang@chino-e.com>

--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
@@ -215,7 +215,7 @@
 				compatible = "sprd,goodix-fp";
 				gfrst-gpio = <&ap_gpio 110 0>;
 				gfirq-gpio = <&eic_async 29 0>;
-				//gfvdd-gpio = <&eic_async 29 0>;
+				vdd_io-supply = <&vddldo3>;
 			};
 
 			sprd-uid {
