--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
@@ -227,6 +227,7 @@
                 		usbcable-gpio = <&ap_gpio 140 GPIO_ACTIVE_LOW>;
                 		usbcable-gpio1 = <&ap_gpio 178 GPIO_ACTIVE_LOW>;
                 		usbcable-gpio2 = <&ap_gpio 179 GPIO_ACTIVE_LOW>;
+                		usbcable-gpio3 = <&ap_gpio 180 GPIO_ACTIVE_LOW>;
                 		debounce = <256000>;
                 		status = "okay";
         		};
