Bug #2459136 arm64: dts: add skin-thmzone node
[root cause  ]: add skin-thmzone node
[changes     ]: add skin-thmzone node
[side effects]: no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: na
[board]: L5-2/L5PRO-1/N6PRO-2/N6L
[test case]: get skin-thmzone temp
[reviewers]: charger_xm

commit_template_version:v1
Signed-off-by: Lisha Xie <Lisha.Xie@unisoc.com>

Change-Id: Ic51bb8d756a0aedf41bf86be7fe501c7bec83475

--- a/arch/arm64/boot/dts/sprd/ums512-1h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums512-1h10-overlay.dts
@@ -60,6 +60,12 @@
 				nvmem-cells = <&uid_start>, <&uid_end>;
 				nvmem-cell-names = "uid_start", "uid_end";
 			};
+
+			skin_sensor: skin-sensor {
+				compatible = "sprd, skin-thermal";
+				#thermal-sensor-cells = <0>;
+				sensor-names = "board-thmzone";
+			};
 		};
 	};
 };
@@ -102,6 +108,10 @@
 
 &chosen {
 	bootargs_ext = "kvm-arm.mode=none";
+};
+ 
+&skin_thmzone {
+	thermal-sensors = <&skin_sensor>;
 };
 
 &i2c0 {
