--- a/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
@@ -194,6 +194,15 @@
 				temp-const = <681>;
 				const-offset = <3000>;
 			};
+ 
+			skin_sensor: skin-sensor {
+				compatible = "sprd, skin-thermal";
+				#thermal-sensor-cells = <0>;
+				sensor-names = "back-thmzone",
+						"front-thmzone",
+						"left-thmzone",
+						"right-thmzone";
+			};
 
 			/*fingerprint@0 {
 				compatible = "microarray,afs121";
@@ -242,6 +251,10 @@
 
 &chosen {
 	bootargs_ext = "kvm-arm.mode=none";
+};
+ 
+&skin_thmzone {
+	thermal-sensors = <&skin_sensor>;
 };
 
 &front_thmzone {
