--- a/arch/arm64/boot/dts/sprd/ums312-2h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums312-2h10-overlay.dts
@@ -126,6 +126,11 @@
 					nvmem-cells = <&uid_start>, <&uid_end>;
 					nvmem-cell-names = "uid_start", "uid_end";
 				};
+				skin_sensor: skin-sensor {
+					compatible = "sprd, skin-thermal";
+					#thermal-sensor-cells = <0>;
+					sensor-names = "board-thmzone";
+				};
 			};
 		};
 };
@@ -228,6 +233,10 @@
 
 &chosen {
 	bootargs_ext = "kvm-arm.mode=none";
+};
+ 
+&skin_thmzone {
+	thermal-sensors = <&skin_sensor>;
 };
 
 &i2c0 {
