--- a/arch/arm64/boot/dts/sprd/ums312/thermal.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums312/thermal.dtsi
@@ -190,6 +190,11 @@
 			polling-delay = <0>;
 			thermal-sensors = <&ap_thm2 0>;
 		};
+ 
+		skin_thmzone: skin-thmzone {
+			polling-delay-passive = <0>;
+			polling-delay = <0>;
+		};
 
 		osctsen_thmzone: osctsen-thmzone {
 			polling-delay-passive = <0>;
