--- a/arch/arm64/boot/dts/sprd/ums9620/thermal.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums9620/thermal.dtsi
@@ -408,6 +408,11 @@
 			polling-delay-passive = <0>;
 			polling-delay = <0>;
 		};
+ 
+		skin_thmzone: skin-thmzone {
+			polling-delay-passive = <0>;
+			polling-delay = <0>;
+		};
 
 		osctsen_thmzone: osctsen-thmzone {
 			polling-delay-passive = <0>;
