Bug #2459136 arm: dts: add skin-thmzone node
[root cause  ]: add skin-thmzone node
[changes     ]: add skin-thmzone node
[side effects]: no
[self test   ]: yes
[download normally]: yes
[power on/off normally]: yes
[do common repository/branch inspection]: yes
[is there dependence]: no
[confirm dependent commit]: na
[board]: LE/PIKE2
[test case]: get skin-thmzone temp
[reviewers]: charger_xm

commit_template_version:v1
Signed-off-by: Lisha Xie <Lisha.Xie@unisoc.com>

Change-Id: I859eaba4149cbe3de45b3778998b98aa7c9f6fd7

--- a/arch/arm/boot/dts/sp7731e-1h10-overlay.dts
+++ b/arch/arm/boot/dts/sp7731e-1h10-overlay.dts
@@ -104,6 +104,12 @@
 				sprd,dumpmem-info = <0x50800000 0x10000>;
 			};
 
+			skin_sensor: skin-sensor {
+				compatible = "sprd, skin-thermal";
+				#thermal-sensor-cells = <0>;
+				sensor-names = "board-thmzone";
+			};
+
 			pwm_backlight: sprd_backlight {
 				compatible = "pwm-backlight";
 				pwms = <&pwms 1 20000>;
@@ -298,6 +304,10 @@
 
 &chosen {
 	bootargs_ext = "dummy_hcd.num=0";
+};
+
+&skin_thmzone {
+	thermal-sensors = <&skin_sensor>;
 };
 
 &reserved_memory {
@@ -527,6 +537,7 @@
 &sdio0 {
 	cd-gpios = <&ap_gpio 2 1>;
 };
+
 
 &thm_zone {
 	bd_thmzone: board-thmzone {
