--- a/arch/arm/boot/dts/sp7731e-mach.dtsi
+++ b/arch/arm/boot/dts/sp7731e-mach.dtsi
@@ -184,6 +184,10 @@
 				};
 			};
 		};
+		skin_thmzone: skin-thmzone {
+			polling-delay-passive = <0>;
+			polling-delay = <0>;
+		};
 	};
 
 	cooling-devices {
