--- a/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10-overlay.dts
@@ -219,7 +219,23 @@
 				nvmem-cells = <&uid_start>, <&uid_end>;
 				nvmem-cell-names = "uid_start", "uid_end";
 			};
-
+			bq2560xpe_chg: bq2560xpe {
+				compatible = "ti,bq2560xpe_chg";
+				io-channels = <&pmic_adc 30>, <&pmic_adc 31>;
+				io-channel-names = "dp", "dm";
+			};
+			bq2560xqc_chg: bq2560xqc {
+				compatible = "ti,bq2560xqc_chg";
+				io-channels = <&pmic_adc 30>, <&pmic_adc 31>;
+				io-channel-names = "dp", "dm";
+				dpdm-gpio = <&ap_gpio 149 GPIO_ACTIVE_LOW>;
+			};
+			hl7015qc_chg: hl7015qc {
+				compatible = "hl,hl7015qc_chg";
+				io-channels = <&pmic_adc 30>, <&pmic_adc 31>;
+				io-channel-names = "dp", "dm";
+				dpdm-gpio = <&ap_gpio 149 GPIO_ACTIVE_LOW>;
+			};
 		};
 	};
 };
